// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flex renders with css prop 1`] = `
.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 1px;
}

<div
  class="emotion-0"
>
  hola
</div>
`;

exports[`Flex renders with sx prop 1`] = `
.emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  padding: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  class="emotion-0"
>
  hola
</div>
`;
